Commit on Nov 27

--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -45,9 +45,11 @@
 
 			</div>
 			<div class="col-md-4">
-				<h2>Heading</h2>
-				<p></p>
-
+				<h2>JDBC Connection</h2>
+				<p>
+				<a href="login.html">Goto Login Page</a> <br>
+				<a href="register.html">Register Uger</a> <br>
+				</p>
 			</div>
 		</div>
 		<div class="row">
