Forward() is fixed, include has some bugs

--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -39,7 +39,8 @@
 			<div class="col-md-4">
 				<h2>HttpServlet Servlet Collaboration </h2>
 				<p>
-				<a href="helloWorld.html">Welcome HttpServlet Hello World</a> <br>
+				<a href="helloWorld.html"> Request Dispatcher forward() </a> <br>
+				<a href="helloWorldInclude.html">Request Dispatcher include() </a> <br>
 				<a href="inputPage.html">Goto Input Page</a> <br>
 				</p>
 
