Completed till Session Tracking.

--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -20,11 +20,12 @@
 		<p>Contains step By Step Progress</p>
 		<p>Browse by date</p>
 	</div>
-
 	<div class="container-fluid">
+
+		<!-- ############### ROW 2 ################# -->
 		<div class="row">
 			<div class="col-md-4">
-				<h2>Day1</h2>
+				<h2>Servlets Creation</h2>
 				<p>
 					<!-- instead of Giving full URL, just give the link  -->
 					<a href="firstMethod">Create Servlet by Service (I)</a> <br>
@@ -37,25 +38,39 @@
 
 			</div>
 			<div class="col-md-4">
-				<h2>HttpServlet Servlet Collaboration </h2>
+				<h2>HttpServlet Servlet Collaboration</h2>
 				<p>
-				<a href="helloWorld.html"> Request Dispatcher forward() </a> <br>
-				<a href="helloWorldInclude.html">Request Dispatcher include() </a> <br>
-				<a href="inputPage.html">Goto Input Page</a> <br>
+					<a href="helloWorld.html"> Request Dispatcher forward() </a> <br>
+					<a href="helloWorldInclude.html">Request Dispatcher include() </a>
+					<br> <a href="inputPage.html">Goto Input Page</a> <br>
 				</p>
-
 			</div>
 			<div class="col-md-4">
-				<h2>JDBC Connection</h2>
+				<h2>HttpServlet Servlet Config and Context</h2>
 				<p>
-				<a href="login.html">Goto Login Page</a> <br>
-				<a href="register.html">Register Uger</a> <br>
+					<a href="config1">getServletConfig()[getInitParams] </a> <br> <a
+						href="context">getServletContext()[getInitParams] </a> <br>
+					<a href="attributesTest.html">Get and Set Attributes</a> <br>
 				</p>
 			</div>
 		</div>
+
+		<!-- ############### ROW 2 ################# -->
 		<div class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
+			<div class="col-md-4">
+				<h2>JDBC Connection</h2>
+				<p>
+					<a href="login.html">Goto Login Page</a> <br> <a
+						href="register.html">Register Uger</a> <br>
+				</p>
+			</div>
+			<div class="col-md-4">
+			<h2>Session Tracking</h2>
+				<p>
+					<a href="login.html">Goto Login Page</a> <br> <a
+						href="register.html">Register Uger</a> <br>
+				</p>
+			</div>
 			<div class="col-md-4"></div>
 		</div>
 		<div class="row">
