Session about to complete

--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -60,15 +60,16 @@
 			<div class="col-md-4">
 				<h2>JDBC Connection</h2>
 				<p>
-					<a href="login.html">Goto Login Page</a> <br> <a
-						href="register.html">Register Uger</a> <br>
+					<a href="login.html">Goto Login </a> <br> 
+					<a href="register.html">Register User</a> <br>
 				</p>
 			</div>
 			<div class="col-md-4">
 			<h2>Session Tracking</h2>
 				<p>
-					<a href="login.html">Goto Login Page</a> <br> <a
-						href="register.html">Register Uger</a> <br>
+					<a href="loginHidden.html">Goto Hidden Form Session Login </a> <br>
+					<a href="loginSession.html">Goto Session Login </a> <br> 
+					<a href="loginURL.html">Goto URL ReWriting</a> <br>
 				</p>
 			</div>
 			<div class="col-md-4"></div>
