--- a/WebContent/loginHidden.html
+++ b/WebContent/loginHidden.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<center>
-		<h1>Http Session Demonstration </h1>
-		<form action="loginHttpSession" method="get">
+		<h1>Hidden Form Feild Demonstration </h1>
+		<form action="loginHidden" method="get">
 			<br>Input <input type="text" name="id"/>
 			<br><input type="submit" value="Login"/> 
 		</form>
