--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class="container-fluid">
 
-		<!-- ############### ROW 2 ################# -->
+		<!-- ############### ROW 1 ################# -->
 		<div class="row">
 			<div class="col-md-4">
 				<h2>Servlets Creation</h2>
@@ -48,8 +48,8 @@
 			<div class="col-md-4">
 				<h2>HttpServlet Servlet Config and Context</h2>
 				<p>
-					<a href="config1">getServletConfig()[getInitParams] </a> <br> <a
-						href="context">getServletContext()[getInitParams] </a> <br>
+					<a href="config1">getServletConfig()[getInitParams] </a> <br>
+					<a href="context">getServletContext()[getInitParams] </a> <br>
 					<a href="attributesTest.html">Get and Set Attributes</a> <br>
 				</p>
 			</div>
@@ -60,24 +60,49 @@
 			<div class="col-md-4">
 				<h2>JDBC Connection</h2>
 				<p>
-					<a href="login.html">Goto Login </a> <br> 
-					<a href="register.html">Register User</a> <br>
+					<a href="login.html">Goto Login </a> <br> <a
+						href="register.html">Register User</a> <br>
 				</p>
 			</div>
 			<div class="col-md-4">
-			<h2>Session Tracking</h2>
+				<h2>Session Tracking</h2>
 				<p>
 					<a href="loginHidden.html">Goto Hidden Form Session Login </a> <br>
-					<a href="loginSession.html">Goto Session Login </a> <br> 
-					<a href="loginURL.html">Goto URL ReWriting</a> <br>
+					<a href="loginSession.html">Goto Session Login </a> <br> <a
+						href="loginURL.html">Goto URL ReWriting</a> <br> <a
+						href="loginCookie.html">Cookie session</a> <br>
 				</p>
 			</div>
-			<div class="col-md-4"></div>
+			<div class="col-md-4">
+			<h2>Filters</h2>
+				<p>
+					<a href="F1Filter0Init">Filter Invoked (Filter Chain in XML top to bottom) </a> <br>
+					<a href="filterInvokeServlet">Filter Invoking a Servlet</a> <br>
+					<a href="F1Filter1">Login Through Filter </a> <br>
+				</p>
+			</div>
 		</div>
+		
+	<!-- ############### ROW 3 ################# -->
 		<div class="row">
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
-			<div class="col-md-4"></div>
+			<div class="col-md-4">
+				<h2>Servlets Creation</h2>
+				<p>
+					
+				</p>
+
+			</div>
+			<div class="col-md-4">
+				<h2>HttpServlet Servlet Collaboration</h2>
+				<p>
+				</p>
+			</div>
+			<div class="col-md-4">
+				<h2>HttpServlet Servlet Config and Context</h2>
+				<p>
+					
+				</p>
+			</div>
 		</div>
 	</div>
 
