--- a/WebContent/home.html
+++ b/WebContent/home.html
@@ -78,7 +78,7 @@
 				<p>
 					<a href="F1Filter0Init">Filter Invoked (Filter Chain in XML top to bottom) </a> <br>
 					<a href="filterInvokeServlet">Filter Invoking a Servlet</a> <br>
-					<a href="F1Filter1">Login Through Filter </a> <br>
+					<a href="loginThruFilter.html">Login Thru Filter Init-param </a> <br>
 				</p>
 			</div>
 		</div>
