--- a/WebContent/loginThruFilter.html
+++ b/WebContent/loginThruFilter.html
@@ -10,7 +10,7 @@
 <body>
 	<center>
 		<h1>Login Through the Filter </h1>
-		<form action="loginURL" method="get">
+		<form action="loginThruFilter" method="get">
 			<br>Input <input type="text" name="id"/>
 			<br><input type="submit" value="Login"/> 
 		</form>
