Directory structure maintained and JSP started

--- a/WebContent/html/home.html
+++ b/WebContent/html/home.html
@@ -41,9 +41,9 @@
 			<div class="col-md-4">
 				<h2>HttpServlet Servlet Collaboration</h2>
 				<p>
-					<a href="helloWorld.html"> Request Dispatcher forward() </a> <br>
-					<a href="helloWorldInclude.html">Request Dispatcher include() </a>
-					<br> <a href="inputPage.html">Goto Input Page</a> <br>
+					<a href="html/helloWorld.html"> Request Dispatcher forward() </a> <br>
+					<a href="html/helloWorldInclude.html">Request Dispatcher include() </a>
+					<br> <a href="html/inputPage.html">Goto Input Page</a> <br>
 				</p>
 			</div>
 			<div class="col-md-4">
@@ -51,7 +51,7 @@
 				<p>
 					<a href="config1">getServletConfig()[getInitParams] </a> <br>
 					<a href="context">getServletContext()[getInitParams] </a> <br>
-					<a href="attributesTest.html">Get and Set Attributes</a> <br>
+					<a href="html/attributesTest.html">Get and Set Attributes</a> <br>
 				</p>
 			</div>
 		</div>
@@ -61,17 +61,17 @@
 			<div class="col-md-4">
 				<h2>JDBC Connection</h2>
 				<p>
-					<a href="login.html">Goto Login </a> <br> <a
-						href="register.html">Register User</a> <br>
+					<a href="html/login.html">Goto Login </a> <br> <a
+						href="html/register.html">Register User</a> <br>
 				</p>
 			</div>
 			<div class="col-md-4">
 				<h2>Session Tracking</h2>
 				<p>
-					<a href="loginHidden.html">Goto Hidden Form Session Login </a> <br>
-					<a href="loginSession.html">Goto Session Login </a> <br> <a
-						href="loginURL.html">Goto URL ReWriting</a> <br> <a
-						href="loginCookie.html">Cookie session</a> <br>
+					<a href="html/loginHidden.html">Goto Hidden Form Session Login </a> <br>
+					<a href="html/loginSession.html">Goto Session Login </a> <br> <a
+						href="html/loginURL.html">Goto URL ReWriting</a> <br> <a
+						href="html/loginCookie.html">Cookie session</a> <br>
 				</p>
 			</div>
 			<div class="col-md-4">
@@ -89,7 +89,7 @@
 			<div class="col-md-4">
 				<h2>Listeners</h2>
 				<p>
-					<a href="loginThruFilter.html">Login Thru Filter Init-param </a> <br>
+					<a href="html/loginThruFilter.html">Login Thru Filter Init-param </a> <br>
 				</p>
 
 			</div>
@@ -119,7 +119,7 @@
 			<div class="col-md-4">
 				<h2>JSP Basics</h2>
 				<p>
-					<a href="loginThruFilter.html">Login Thru Filter Init-param </a> <br>
+					<a href="jsp/1includeDirective.jsp">Include Directive Test </a> <br>
 				</p>
 
 			</div>
