--- a/WebContent/html/home.html
+++ b/WebContent/html/home.html
@@ -105,7 +105,6 @@
 				</p>
 			</div>
 		</div>
-	</div>
 	
 	<div class="container">
 	<center> 
@@ -124,8 +123,9 @@
 
 			</div>
 			<div class="col-md-4">
-				<h2>...</h2>
+				<h2>Implicit Objects in JSP</h2>
 				<p>
+				<a href="html/io.html">Implicit Objects </a>
 				</p>
 			</div>
 			<div class="col-md-4">
@@ -134,7 +134,6 @@
 					
 				</p>
 			</div>
-		</div>
-	</div>
+		</div>	
 </body>
 </html>
